<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Campus Companion</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="title_activity_food">Mensaplan</string>
    <string name="title_activity_termin">TerminActivity</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="title_activity_dish">DishActivity</string>
    <string name="hauptmensa">Hauptmensa</string>
    <string name="frischraum">Frischraum</string>
    <string name="cafetaria">Cafetaria</string>
    <string name="noPicYet">Bis jetzt ist kein Bild vorhanden</string>
    <string name="settings">Einstellungen</string>
    <string name="start">Startseite</string>
    <string name="mensa">Lieblingsmensa</string>
    <string name="savenclose">Speichern und Beenden</string>
    <string name="food">Speißeplan</string>
    <string name="config">Einstellungen</string>
    <string name="credits">Credits</string>
    <string name="menue">Menü</string>
    <string name="title_activity_credit">CreditActivity</string>
    <string name="credit1">Hauptverantwortlich für diese App sind:</string>
    <string name="credit2">Thilo woasened</string>
    <string name="credit3">Networking, Kommunmikation, Interfaces</string>
    <string name="credit4">Richard Kellnberger</string>
    <string name="credit5">UI, DB und Management</string>
    <string name="credit6">Adrian Ebert</string>
    <string name="credit7">Kreativer Input</string>

</resources>
