<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.ddns.richardkellnberger.campuscompanion.CreditActivity"
    android:gravity="center" >

    <TextView
        android:id="@+id/credit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/credit1"
        android:gravity="center_horizontal"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/credit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/credit1"
        android:text="@string/credit2"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/credit3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/credit2"
        android:text="@string/credit3"
        android:gravity="center_horizontal"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/credit4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/credit3"
        android:text="@string/credit4"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/credit5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/credit4"
        android:text="@string/credit5"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/credit6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/credit5"
        android:text="@string/credit6"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/credit7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/credit6"
        android:text="@string/credit7"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

</RelativeLayout>
