<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.ddns.richardkellnberger.campuscompanion.FoodActivity" >

    <RelativeLayout
        android:id="@+id/dayLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <ImageButton
            android:id="@+id/last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/minus"
            android:src="@drawable/minus" />

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <ImageButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/plus"
            android:src="@drawable/plus" />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/pageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dayLayout" >

        <Button
            android:id="@+id/m1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/m2"
            android:layout_toStartOf="@+id/m2"
            android:text="@string/hauptmensa"
            android:background="@android:color/holo_blue_dark" />

        <Button
            android:id="@+id/m2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/frischraum"
            android:background="@android:color/holo_green_dark" />

        <Button
            android:id="@+id/m3"
            style="android:buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@+id/m2"
            android:layout_toRightOf="@+id/m2"
            android:text="@string/cafetaria"
            android:background="@android:color/holo_orange_dark" />

    </RelativeLayout>

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pager"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/pageLayout" >
    </android.support.v4.view.ViewPager>

</RelativeLayout>